syntax = "proto3";

option go_package = "TestCopilot/TestEngine/base/example/grpc";

message User {
  // Protobuf 对前几个字段有性能优化
  int64 id = 1;
  string name = 2;
  string avatar = 4;
  //  int64 age = 5;

  map<string, string> attributes = 6;
  // 可选，编译之后带指针，基本不用了
  optional int32 age = 7;
  // 数组，编译之后是切片，也叫 field label
  repeated string fullnames = 8;
  Address address = 9;

  // 标记多个字段中只有一个字段有值，基本不用
  oneof contacts{
    string email = 10;
    string phone = 11;
  }
  Gender gender = 12;

}

message Address{
  string province = 1;
  string city = 2;
}

// 枚举
enum Gender {
  Unknown = 0;
  Male = 1;
  Female = 2;
}

service UserService{
  // 入参和返回值只能有一个
  rpc GetById(GetByIdReq) returns (GetByIdResp);
}

message GetByIdReq {
  int64 id = 1;
}

message GetByIdResp{
  User user = 1;
}